// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/SideNav Current 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <SideNav>
    <nav
      aria-label="Secondary navigation"
      className="side-nav"
    >
      <ul>
        <li>
          <a
            className="is-current"
            href="#"
          >
            One
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Two
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Three
          </a>
        </li>
      </ul>
    </nav>
  </SideNav>
</div>
`;

exports[`Storyshots Prototypes/SideNav Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <SideNav>
    <nav
      aria-label="Secondary navigation"
      className="side-nav"
    >
      <ul>
        <li>
          <a
            href="#"
          >
            One
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Two
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Three
          </a>
        </li>
      </ul>
    </nav>
  </SideNav>
</div>
`;
